<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.twocats.dev.camtimer.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        android:showAsAction="ifRoom" >

        <menu>
            <item android:id="@+id/settings_delay01"
                  android:orderInCategory="100"
                  android:title="@string/settings_delay01" />
            <item android:id="@+id/settings_delay02"
                  android:orderInCategory="100"
                  android:title="@string/settings_delay02" />
            <item android:id="@+id/settings_delay05"
                  android:orderInCategory="100"
                  android:title="@string/settings_delay05" />
            <item android:id="@+id/settings_delay10"
                  android:orderInCategory="100"
                  android:title="@string/settings_delay10" />
            <item android:id="@+id/settings_delay30"
                  android:orderInCategory="100"
                  android:title="@string/settings_delay30" />
        </menu>
    </item>

    <item
        android:id="@+id/action_switch"
        android:orderInCategory="102"
        android:title="@string/action_switch"
        android:showAsAction="ifRoom" >
    </item>

    <item
        android:id="@+id/action_credits"
        android:orderInCategory="103"
        android:title="@string/action_credits"
        android:showAsAction="ifRoom" >

        <menu>
            <item android:id="@+id/creditsMe"
                  android:orderInCategory="100"
                  android:title="@string/credits_me" />
        </menu>
    </item>

    <item
        android:id="@+id/action_exit"
        android:orderInCategory="120"
        android:title="@string/action_exit"
        android:showAsAction="never" />
</menu>
